# ugv

./: CMakeLists.txt  CMakeLists_BACKUP_18419.txt  CMakeLists_BASE_18632.txt  CMakeLists_LOCAL_18505.txt  CMakeLists_REMOTE_18691.txt  README.md  index.html  package.xml
documents/: poster.pptx
inprocess/: UGV.cpp  main.cpp
launch/: UGV.urdf  UGV.urdf.save  config1.launch  config2.launch  config3.launch  config4.launch  contrun.launch  costmap_common_params.yaml  diffdrive.launch  frames.gv  geotiff_mapper.launch  global_costmap_params.yaml  hector.launch  hector_test.launch  joystick_hector.launch  keyboard.launch  laserconfig.yaml  local_costmap_params.yaml  move_base.launch  new_ugv.launch  ugv.launch  ugv.rviz  ugv.urdf  ugvlaunch.launch
launch/config1/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml
launch/config2/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
launch/config3/: base_local_planner_params.yaml  costmap_common_params.yaml
launch/config4/: costmap_common_params.yaml  local_costmap_params.yaml  move_base_params.yaml
scripts/: getCont.py  runugv.sh
src/: .UGVinterface.cpp.swp  RoboteqDevice.cpp  UGV.cpp  UGVinterface.cpp  controller.cpp  joystickcontrol.cpp  keyboardcontrol.cpp  laserbroadcaster.cpp  randomcontrol.cpp  randomcontrol.cpp.save  ugv.cpp
ugv/: CMakeLists.txt  package.xml
ugv/msg/: motorvels.msg
ugv/src/: ugv.cpp
