<?xml version="1.0"?>
<package>
  <name>ugv</name>
  <version>1.0.0</version>
  <description>ROS-Package to control a UGV with a Roboteq motor controller</description>
  <maintainer email="cmcollander@gmail.com">Chris Collander</maintainer>
  <license>TODO</license>
  
  <build_depend>message_generation</build_depend>
  <build_depend>diff_drive_controller</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>
  <build_depend>hardware_interface</build_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <diff_drive_controller plugin="${prefix}/diff_drive_controller_plugins.xml" />
  </export>
</package>
